# hs-cyborg

./: .gitignore  README.md  TODO.md  config.json  hs-cyborg.cabal  stack.yaml
app/: cyborg.hs
benchmarks/: Bench.hs
exec/: runbackup.hs
src/: Borg.hs
src/Borg/: Connection.hs  Data.hs  Utils.hs
test/: Test.hs
