name:                  hs-cyborg
version:               0.1.0.0
cabal-version:         >=1.10
build-type:            Simple
author:                Arthur Lee
maintainer:            me@arthur.li
-- description:
-- category:
extra-source-files:    README.md
-- tested-with:           GHC == 7.10.3
-- data-files:
-- data-dir:

flag optimise
  description:
    Enable aggressive optimisations for the executable
  default: False
  manual: True

flag warn-all
  description:
    Enable all GHC warnings. This can be quite noisy.
  default: False
  manual: True

library
  exposed-modules:     Borg
                     , Borg.Data
                     , Borg.Connection
                     , Borg.Utils
  -- other-modules:
  build-depends:       base >= 4.8 && < 5
                     , lens
                     , mtl
                     , text
                     , aeson
                     , vector
                     , safe
                     , shelly
                     , time
  hs-source-dirs:      src
  default-extensions:  OverloadedStrings
  -- other-extensions:
  ghc-options:         -Wall
                       -funbox-strict-fields
  default-language:    Haskell2010
  if flag(warn-all)
    ghc-options:       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -- -fwarn-auto-orphans
                       -fwarn-missing-local-sigs
                       -- -fwarn-missing-exported-sigs -- GHC bug
                       -- -fwarn-missing-import-lists
                       -fwarn-identities

executable cyborg
  main-is:             cyborg.hs
  -- other-modules:       Paths_module_name
  build-depends:       base >= 4.8 && < 5
                     , hs-cyborg
                     , text
                     , bytestring
                     , aeson
  hs-source-dirs:      app
  default-extensions:  OverloadedStrings
  ghc-options:         -Wall
  default-language:    Haskell2010
  if flag(optimise)
    ghc-options:       -O2

-- test-suite test-x
--   type:                exitcode-stdio-1.0
--   main-is:             Test.hs
--   -- type:                detailed-0.9
--   -- test-module:         Test
--   build-depends:       base >= 4.8 && < 5
--                      -- , Cabal >= 1.9.2
--                      , tasty
--                      , tasty-hunit
--                      -- , HUnit
--                      , tasty-quickcheck
--                      , QuickCheck
--   hs-source-dirs:      tests
--   ghc-options:         -Wall
--   default-language:    Haskell2010

-- benchmark criterion
--   type:                exitcode-stdio-1.0
--   main-is:             Bench.hs
--   build-depends:       base >= 4.8 && < 5
--                      , criterion >= 1.1
--   hs-source-dirs:      benchmarks
--   ghc-options:         -Wall
--                        -O2
--   default-language:    Haskell2010
